// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`menu > can navigate with arrow keys 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_3r_"
      aria-describedby="menu-_r_3r_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with active props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_55_"
      aria-describedby="menu-_r_55_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with borderless props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_51_"
      aria-describedby="menu-_r_51_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4l_"
      aria-describedby="menu-_r_4l_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with disabled props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4t_"
      aria-describedby="menu-_r_4t_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > menu.Item > render with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4p_"
      aria-describedby="menu-_r_4p_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders bottom 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_49_"
      aria-describedby="menu-_r_49_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders left 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4d_"
      aria-describedby="menu-_r_4d_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4h_"
      aria-describedby="menu-_r_4h_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > placement > renders top 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_45_"
      aria-describedby="menu-_r_45_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders nested 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_30_"
      aria-describedby="menu-_r_30_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_8_"
      aria-describedby="menu-_r_8_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Group and labelDescription 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_e_"
      aria-describedby="menu-_r_e_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.Item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_4_"
      aria-describedby="menu-_r_4_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink & Menu.Item disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_s_"
      aria-describedby="menu-_r_s_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with Menu.ItemLink 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_k_"
      aria-describedby="menu-_r_k_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with disclosure not a function 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_0_"
      aria-describedby="menu-_r_0_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with footer 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2c_"
      aria-describedby="menu-_r_2c_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with rightComponent  (keyboard navigation) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2s_"
      aria-describedby="menu-_r_2s_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with rightComponent 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2g_"
      aria-describedby="menu-_r_2g_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with rightComponent and link item (keyboard navigation) 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2o_"
      aria-describedby="menu-_r_2o_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with rightComponent and link item 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2k_"
      aria-describedby="menu-_r_2k_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > renders with visible=false 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-_r_2_"
      aria-describedby="menu-_r_2_"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`menu > should search on simple complex childs 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      aria-controls="menu-menu"
      aria-describedby="menu-menu"
      class="styles__pjfil59"
      tabindex="-1"
    >
      <button
        aria-expanded="true"
        aria-haspopup="dialog"
        data-testid="disclosure"
        type="button"
      >
        Menu
      </button>
    </div>
  </div>
</DocumentFragment>
`;
